# AgentBusters

./: .dockerignore  .env.example  .gitignore  CIO-AGENT-ARCHITECTURE.md  Dockerfile  Dockerfile.green  Dockerfile.purple  README.md  docker-compose.trtllm.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml  crypto_eval.yaml  full_eval.yaml  test-and-publish-green.yml
config/: eval_all.yaml  eval_config.yaml  eval_crypto.yaml  eval_crypto_production.yaml  eval_full.yaml  eval_gdpval.yaml  eval_large.yaml  eval_medium.yaml  eval_quick.yaml  eval_quick_test.yaml  eval_with_robustness.yaml  multi_dataset_eval.yaml
data/options/: questions.json
data/synthetic_questions/: results.json
docs/: BENCHMARK_GUIDE.md
experiments/: experiment_configs.yaml
paper/: agentbusters.tex  generate_figures.py
results/: eval_medium_20260202_145928.json  eval_quick_test_20260202_113719.json
scripts/: __init__.py  deploy_trtllm.py  deploy_vllm.py  run_a2a_eval.py  run_all_models.sh  run_benchmark.py  run_demo.py
src/: simple_purple_agent.py
src/cio_agent/: a2a_client.py  a2a_server.py  agentbeats_results.py  alphavantage.py  cli.py  crypto_benchmark.py  eval_config.py  evaluator.py  green_agent.py  green_executor.py  messenger.py  models.py  orchestrator.py  synthetic_generator.py  task_generator.py  unified_scoring.py
src/cio_agent/data_providers/: __init__.py  bizfinbench_provider.py  prbench_provider.py
src/cio_agent/datasets/: __init__.py  bizfinbench_provider.py  csv_provider.py
src/evaluators/: __init__.py  bizfinbench_evaluator.py  cost_tracker.py  execution.py  llm_utils.py  macro.py  options.py  prbench_evaluator.py  public_csv_evaluator.py  synthetic_evaluator.py
src/mcp_clients/: __init__.py  edgar.py  sandbox.py  yahoo_finance.py
src/mcp_servers/: __init__.py  options_chain.py  sandbox.py  sec_edgar.py  web_search.py  yahoo_finance.py
src/purple_agent/: __init__.py  agent.py  card.py  cli.py  executor.py  mcp_toolkit.py  mcp_tools.py  server.py  service.py  tools.py
src/trtllm_api/: __init__.py  start.sh  trtllm_openai_api.py
tests/: conftest.py  test_a2a_basics.py  test_a2a_green.py  test_bizfinbench_provider.py  test_crypto_benchmark.py  test_e2e.py  test_eval_config.py  test_evaluator.py  test_evaluators.py  test_gdpval.py  test_green_agent_datasets.py  test_llm_config.py  test_mcp_servers.py  test_purple_agent.py  test_synthetic_evaluator.py
